--- a/app/src/main/res/layout/events_layout.xml
+++ b/app/src/main/res/layout/events_layout.xml
@@ -1,11 +1,11 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:background="@android:color/white"
-            android:paddingBottom="10dp"
-            tools:context="com.taplytics.example.CodeExperimentsActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@android:color/white"
+    android:paddingBottom="10dp"
+    tools:context="com.taplytics.example.CodeExperimentsActivity">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -16,8 +16,7 @@
         <RelativeLayout
             android:id="@+id/image_layout"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/imageView1"
@@ -26,7 +25,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/image4"/>
+                android:src="@drawable/image4" />
 
             <com.taplytics.example.views.CustomFontsTextView
                 android:id="@+id/title"
@@ -39,19 +38,17 @@
                 android:text="@string/events_title"
                 android:textColor="@android:color/white"
                 android:textSize="20sp"
-                app:fontName="avenir_bold.ttf"/>
+                app:fontName="avenir_bold.ttf" />
         </RelativeLayout>
 
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/transparent"
             android:minHeight="?attr/actionBarSize"
-            android:theme="@style/TaplyticsToolbar">
-        </android.support.v7.widget.Toolbar>
+            android:theme="@style/TaplyticsToolbar"></android.support.v7.widget.Toolbar>
 
         <RelativeLayout
             android:id="@+id/bottom_layout"
@@ -69,7 +66,7 @@
                 android:text="@string/what_text"
                 android:textColor="@color/text_dark_grey"
                 android:textSize="19sp"
-                app:fontName="avenir.ttf"/>
+                app:fontName="avenir.ttf" />
 
             <com.taplytics.example.views.CustomFontsTextView
                 android:id="@+id/events_text"
@@ -83,7 +80,7 @@
                 android:text="@string/code_experiment_text"
                 android:textColor="@color/text_grey"
                 android:textSize="15sp"
-                app:fontName="avenir.ttf"/>
+                app:fontName="avenir.ttf" />
 
             <com.taplytics.example.views.CustomFontsTextView
                 android:id="@+id/events_action"
@@ -97,7 +94,7 @@
                 android:text="@string/in_action_text"
                 android:textColor="@color/text_dark_grey"
                 android:textSize="19sp"
-                app:fontName="avenir.ttf"/>
+                app:fontName="avenir.ttf" />
 
             <com.taplytics.example.views.CustomFontsTextView
                 android:id="@+id/events_action_text"
@@ -111,7 +108,7 @@
                 android:text="@string/event_action"
                 android:textColor="@color/text_grey"
                 android:textSize="15sp"
-                app:fontName="avenir.ttf"/>
+                app:fontName="avenir.ttf" />
         </RelativeLayout>
 
         <com.taplytics.example.views.CustomFontsButton
@@ -125,7 +122,7 @@
             android:background="@drawable/purple_button_state"
             android:text="@string/send_an_event"
             android:textColor="@android:color/white"
-            app:fontName="avenir.ttf"/>
+            app:fontName="avenir.ttf" />
     </RelativeLayout>
 
 </ScrollView>
