--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -1,5 +1,4 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
@@ -7,21 +6,18 @@
     android:background="@drawable/bg"
     tools:context="com.taplytics.example.MainActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/transparent"
         android:minHeight="?attr/actionBarSize"
-        android:theme="@style/TaplyticsToolbar">
-    </android.support.v7.widget.Toolbar>
+        android:theme="@style/TaplyticsToolbar"></android.support.v7.widget.Toolbar>
 
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:paddingBottom="10dp"
-        >
+        android:paddingBottom="10dp">
 
 
         <RelativeLayout
@@ -36,7 +32,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="56dp"
-                android:src="@drawable/taplytics_grey"/>
+                android:src="@drawable/taplytics_grey" />
 
             <com.taplytics.example.views.CustomFontsTextView
                 android:id="@+id/textView1"
@@ -50,7 +46,7 @@
                 android:text="@string/mainText"
                 android:textColor="@color/grey"
                 android:textSize="14sp"
-                app:fontName="avenir.ttf"/>
+                app:fontName="avenir.ttf" />
 
 
             <LinearLayout
@@ -65,7 +61,7 @@
                 android:layout_marginTop="25dp"
                 android:background="@color/grey"
                 android:orientation="vertical"
-                android:visibility="invisible"/>
+                android:visibility="invisible" />
 
 
             <com.taplytics.example.views.CustomFontsTextView
@@ -79,7 +75,7 @@
                 android:text="View the source code for each example to see how to use Taplytics."
                 android:textColor="@color/grey"
                 android:textSize="11sp"
-                app:fontName="avenir.ttf"/>
+                app:fontName="avenir.ttf" />
 
             <com.taplytics.example.views.CustomFontsButton
                 android:id="@+id/code_experiments_button"
@@ -92,7 +88,7 @@
                 android:text="@string/code_experiments_button_text"
                 android:textColor="@color/grey"
                 android:textSize="12sp"
-                app:fontName="avenir.ttf"/>
+                app:fontName="avenir.ttf" />
 
             <com.taplytics.example.views.CustomFontsButton
                 android:id="@+id/user_information_button"
@@ -105,7 +101,7 @@
                 android:text="@string/user_attributes_button_text"
                 android:textColor="@color/grey"
                 android:textSize="12sp"
-                app:fontName="avenir.ttf"/>
+                app:fontName="avenir.ttf" />
 
             <com.taplytics.example.views.CustomFontsButton
                 android:id="@+id/events_button"
@@ -118,7 +114,7 @@
                 android:text="@string/events_button_text"
                 android:textColor="@color/grey"
                 android:textSize="12sp"
-                app:fontName="avenir.ttf"/>
+                app:fontName="avenir.ttf" />
 
             <com.taplytics.example.views.CustomFontsButton
                 android:id="@+id/visual_editor_button"
@@ -131,7 +127,7 @@
                 android:text="@string/visual_experiments_button_text"
                 android:textColor="@color/grey"
                 android:textSize="12sp"
-                app:fontName="avenir.ttf"/>
+                app:fontName="avenir.ttf" />
         </RelativeLayout>
 
     </ScrollView>
