--- a/app/src/main/res/layout/user_attributes_layout.xml
+++ b/app/src/main/res/layout/user_attributes_layout.xml
@@ -1,11 +1,11 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white"
-            android:paddingBottom="10dp"
-            tools:context="com.taplytics.example.CodeExperimentsActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:color/white"
+    android:paddingBottom="10dp"
+    tools:context="com.taplytics.example.CodeExperimentsActivity">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -25,7 +25,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/image3"/>
+                android:src="@drawable/image3" />
 
             <com.taplytics.example.views.CustomFontsTextView
                 android:id="@+id/title"
@@ -38,18 +38,16 @@
                 android:text="@string/user_attributes_button_text"
                 android:textColor="@android:color/white"
                 android:textSize="20sp"
-                app:fontName="avenir_bold.ttf"/>
+                app:fontName="avenir_bold.ttf" />
         </RelativeLayout>
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/transparent"
             android:minHeight="?attr/actionBarSize"
-            android:theme="@style/TaplyticsToolbar">
-        </android.support.v7.widget.Toolbar>
+            android:theme="@style/TaplyticsToolbar"></android.support.v7.widget.Toolbar>
 
         <RelativeLayout
             android:id="@+id/bottom_layout"
@@ -67,7 +65,7 @@
                 android:text="@string/what_text"
                 android:textColor="@color/text_dark_grey"
                 android:textSize="19sp"
-                app:fontName="avenir.ttf"/>
+                app:fontName="avenir.ttf" />
 
             <com.taplytics.example.views.CustomFontsTextView
                 android:id="@+id/user_attributes_text"
@@ -81,7 +79,7 @@
                 android:text="@string/user_attributes_text"
                 android:textColor="@color/text_grey"
                 android:textSize="15sp"
-                app:fontName="avenir.ttf"/>
+                app:fontName="avenir.ttf" />
         </RelativeLayout>
     </RelativeLayout>
 
