--- a/app/src/main/res/layout/visual_experiments_layout.xml
+++ b/app/src/main/res/layout/visual_experiments_layout.xml
@@ -1,11 +1,11 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:background="@android:color/white"
-            android:paddingBottom="10dp"
-            tools:context="com.taplytics.example.VisualActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@android:color/white"
+    android:paddingBottom="10dp"
+    tools:context="com.taplytics.example.VisualActivity">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -25,7 +25,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/image5"/>
+                android:src="@drawable/image5" />
 
             <com.taplytics.example.views.CustomFontsTextView
                 android:id="@+id/title"
@@ -38,19 +38,17 @@
                 android:text="@string/visual_experiments_button_text"
                 android:textColor="@android:color/white"
                 android:textSize="20sp"
-                app:fontName="avenir_bold.ttf"/>
+                app:fontName="avenir_bold.ttf" />
         </RelativeLayout>
 
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/transparent"
             android:minHeight="?attr/actionBarSize"
-            android:theme="@style/TaplyticsToolbar">
-        </android.support.v7.widget.Toolbar>
+            android:theme="@style/TaplyticsToolbar"></android.support.v7.widget.Toolbar>
 
 
         <RelativeLayout
@@ -69,7 +67,7 @@
                 android:text="@string/what_text"
                 android:textColor="@color/text_dark_grey"
                 android:textSize="19sp"
-                app:fontName="avenir.ttf"/>
+                app:fontName="avenir.ttf" />
 
             <com.taplytics.example.views.CustomFontsTextView
                 android:id="@+id/visual_experiments_text"
@@ -83,7 +81,7 @@
                 android:text="@string/visual_experiment_text"
                 android:textColor="@color/text_grey"
                 android:textSize="15sp"
-                app:fontName="avenir.ttf"/>
+                app:fontName="avenir.ttf" />
 
             <com.taplytics.example.views.CustomFontsTextView
                 android:id="@+id/visual_experiments_action"
@@ -97,7 +95,7 @@
                 android:text="@string/in_action_text"
                 android:textColor="@color/text_dark_grey"
                 android:textSize="19sp"
-                app:fontName="avenir.ttf"/>
+                app:fontName="avenir.ttf" />
 
             <com.taplytics.example.views.CustomFontsTextView
                 android:id="@+id/visual_experiments_action_text"
@@ -111,7 +109,7 @@
                 android:text="@string/visual_experiment_action"
                 android:textColor="@color/text_grey"
                 android:textSize="15sp"
-                app:fontName="avenir.ttf"/>
+                app:fontName="avenir.ttf" />
         </RelativeLayout>
 
         <com.taplytics.example.views.CustomFontsButton
@@ -125,7 +123,7 @@
             android:background="@drawable/purple_button_state"
             android:text="An example view"
             android:textColor="@android:color/white"
-            app:fontName="avenir.ttf"/>
+            app:fontName="avenir.ttf" />
     </RelativeLayout>
 
 </ScrollView>
