--- a/app/src/main/res/values-v14/styles.xml
+++ b/app/src/main/res/values-v14/styles.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
-    </style>
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light"/>
 
     <style name="MyTheme" parent="AppBaseTheme">
         <item name="windowNoTitle">true</item>
