--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,6 @@
 <resources>
 
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
-    </style>
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light"/>
 
     <style name="MyTheme" parent="AppBaseTheme">
         <item name="windowNoTitle">true</item>
